--- a/0Dockerfile_py39_cuda11.2
+++ b/0Dockerfile_py39_cuda11.2
@@ -1,6 +1,6 @@
 # ==================================================================
 # NAME liuweipeng/dl:cuda11.2.2-dev
-# sudo docker build -t liuweipeng/dl:cuda11 .
+# sudo docker build -t liuweipeng/dl:cuda11.2.2-dev .
 # ------------------------------------------------------------------
 # python        3.9    (apt)
 # ==================================================================
